--- a/ccc/Makefile
+++ b/ccc/Makefile
@@ -6,8 +6,8 @@ CFLAGS = -Wall -Wextra -Werror -g #-fsanitize=address
 
 RM = rm -f
 
-SRC= main.c ft_strjoin.c ft_strlen.c get_next_line_utils.c get_next_line.c ft_strcmp.c ft_strncmp.c ft_split.c \
-	list_fun.c ft_atoi.c raycaster.c
+SRC= main.c libft/ft_strjoin.c libft/ft_strlen.c get_next_line_utils.c get_next_line.c libft/ft_strcmp.c libft/ft_strncmp.c actions.c \
+ libft/ft_split.c list_fun.c libft/ft_atoi.c raycaster.c    \
 
 OBJ = $(SRC:.c=.o)
 
